error_msgs.txt
programs/c/data_structures/output_programs/errors/linkedlist_len_1_error.c:1:1: error: unknown type name 'Line'
Line no. 5 :  ; missing
^
programs/c/data_structures/output_programs/errors/linkedlist_len_1_error.c:1:8: error: expected ';' after top level declarator
Line no. 5 :  ; missing
       ^
       ;
programs/c/data_structures/output_programs/errors/linkedlist_len_1_error.c:1:17: error: unknown type name 'missing'
Line no. 5 :  ; missing
                ^
programs/c/data_structures/output_programs/errors/linkedlist_len_1_error.c:2:5: error: expected ';' after top level declarator
Line no. 6 :  ( missing
    ^
    ;
4 errors generated.
